@@ -14,6 +14,7 @@ import org.mockito.stubbing.Answer;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.util.jar.Attributes;
 import java.util.jar.JarFile;
@@ -47,7 +48,7 @@ public class PackageTypeStrategyManifestReadingTest {
 
     @Before
     public void setUp() throws Exception {
-        url = new URL("file:/foo");
+        url = URI.create("file:/foo").toURL();
     }
 
     @Test
@@ -207,7 +208,7 @@ public class PackageTypeStrategyManifestReadingTest {
     @Test
     @IntegrationRule.Enforce
     public void testSealBaseLocatorForTypeResourceUrlFileUrl() throws Exception {
-        URL url = new URL("file:/foo");
+        URL url = URI.create("file:/foo").toURL();
         when(classLoader.getResource(FOO + "/" + BAR + ".class")).thenReturn(url);
         assertThat(new PackageDefinitionStrategy.ManifestReading.SealBaseLocator.ForTypeResourceUrl(sealBaseLocator)
                 .findSealBase(classLoader, FOO + "." + BAR), is(url));
@@ -217,10 +218,10 @@ public class PackageTypeStrategyManifestReadingTest {
     @Test
     @IntegrationRule.Enforce
     public void testSealBaseLocatorForTypeResourceUrlJarUrl() throws Exception {
-        URL url = new URL("jar:file:/foo.jar!/bar");
+        URL url = URI.create("jar:file:/foo.jar!/bar").toURL();
         when(classLoader.getResource(FOO + "/" + BAR + ".class")).thenReturn(url);
         assertThat(new PackageDefinitionStrategy.ManifestReading.SealBaseLocator.ForTypeResourceUrl(sealBaseLocator)
-                .findSealBase(classLoader, FOO + "." + BAR), is(new URL("file:/foo.jar")));
+                .findSealBase(classLoader, FOO + "." + BAR), is(URI.create("file:/foo.jar").toURL()));
         verifyNoMoreInteractions(sealBaseLocator);
     }
 
@@ -228,10 +229,10 @@ public class PackageTypeStrategyManifestReadingTest {
     @IntegrationRule.Enforce
     @JavaVersionRule.Enforce(9)
     public void testSealBaseLocatorForTypeResourceUrlJavaRuntimeImageUrl() throws Exception {
-        URL url = new URL("jrt:/foo/bar");
+        URL url = URI.create("jrt:/foo/bar").toURL();
         when(classLoader.getResource(FOO + "/" + BAR + ".class")).thenReturn(url);
         assertThat(new PackageDefinitionStrategy.ManifestReading.SealBaseLocator.ForTypeResourceUrl(sealBaseLocator)
-                .findSealBase(classLoader, FOO + "." + BAR), is(new URL("jrt:/foo")));
+                .findSealBase(classLoader, FOO + "." + BAR), is(URI.create("jrt:/foo").toURL()));
         verifyNoMoreInteractions(sealBaseLocator);
     }
 
@@ -239,10 +240,10 @@ public class PackageTypeStrategyManifestReadingTest {
     @IntegrationRule.Enforce
     @JavaVersionRule.Enforce(9)
     public void testSealBaseLocatorForTypeResourceUrlJavaRuntimeImageUrlRawModule() throws Exception {
-        URL url = new URL("jrt:/foo");
+        URL url = URI.create("jrt:/foo").toURL();
         when(classLoader.getResource(FOO + "/" + BAR + ".class")).thenReturn(url);
         assertThat(new PackageDefinitionStrategy.ManifestReading.SealBaseLocator.ForTypeResourceUrl(sealBaseLocator)
-                .findSealBase(classLoader, FOO + "." + BAR), is(new URL("jrt:/foo")));
+                .findSealBase(classLoader, FOO + "." + BAR), is(URI.create("jrt:/foo").toURL()));
         verifyNoMoreInteractions(sealBaseLocator);
     }
 }
